--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,72 +10,68 @@
 
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/login_user_ediText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText5"
+        android:layout_alignStart="@+id/pass_login_editText"
         android:layout_marginTop="258dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_person"
         android:ems="10"
-        android:hint="@string/enter_email"
-        android:inputType="textPersonName"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:labelFor="@id/login_user_ediText"
         android:textColorHint="#000" />
 
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/pass_login_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText4"
+        android:layout_below="@+id/login_user_ediText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="38dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_lock"
         android:ems="10"
-        android:hint="@string/enter_password"
+        android:hint="@string/password"
         android:inputType="textPassword"
+        android:labelFor="@id/pass_login_editText"
         android:textColorHint="#000" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/editText5"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
-        app:cardBackgroundColor="@color/cardview_dark_background"
-        app:cardCornerRadius="16dp" >
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/login_button_text"
-            android:textSize="24sp" />
-    </android.support.v7.widget.CardView>
-
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/logo_login"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_alignBottom="@+id/editText4"
+        android:layout_alignBottom="@+id/login_user_ediText"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="36dp"
         android:contentDescription="@string/yellow_logo_description"
         app:srcCompat="@drawable/yellow_logo" />
 
     <Button
-        android:id="@+id/reg_button"
+        android:id="@+id/reg_button_login"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView"
+        android:layout_below="@+id/login_button"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
-        android:background="#11000000"
+        android:layout_marginTop="27dp"
+        android:background="#ffd400"
+        android:onClick="reg_button_loginClick"
         android:text="@string/register_account" />
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="290dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/pass_login_editText"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="47dp"
+        android:background="#505050"
+        android:onClick="login_buttonClick"
+        android:text="@string/login" />
 
 
 </RelativeLayout>
