--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -11,38 +11,18 @@
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/email_reg_editText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
         android:contentDescription="@string/yellow_logo_description"
         app:srcCompat="@drawable/yellow_logo" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="95dp"
-        app:cardBackgroundColor="@color/cardview_dark_background"
-        app:cardCornerRadius="16dp">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/register_account_text"
-            android:textSize="24sp" />
-    </android.support.v7.widget.CardView>
-
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/pass_reg_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editText7"
-        android:layout_below="@+id/editText2"
-        android:layout_marginTop="46dp"
+        android:layout_below="@+id/email_reg_editText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_lock"
         android:ems="10"
@@ -51,30 +31,28 @@
         android:textColorHint="#000" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/email_reg_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="9dp"
+        android:layout_alignStart="@+id/pass_reg_editText"
+        android:layout_centerVertical="true"
         android:background="#11000000"
-        android:drawableStart="@drawable/ic_action_person"
+        android:drawableStart="@drawable/ic_action_email"
         android:ems="10"
         android:hint="@string/enter_email"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:textColorHint="#000" />
 
-    <EditText
-        android:id="@+id/editText7"
+    <Button
+        android:id="@+id/reg_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/pass_reg_editText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp"
-        android:background="#11000000"
-        android:drawableStart="@drawable/ic_action_date"
-        android:ems="10"
-        android:hint="@string/birthday"
-        android:inputType="date"
-        android:textColorHint="#000" />
+        android:layout_marginTop="39dp"
+        android:background="#ffd400"
+        android:onClick="reg_btnClick"
+        android:text="@string/register"
+        android:textSize="30sp" />
+
 </RelativeLayout>
